--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <h2 class="background-title">山河令</h2>
   <h2 class="main-title">Word of Honor</h2>
-  <h3 class="sub-title">participatory fan culture and queer media operating under Chinese censorship</h3>
+  <h3 class="sub-title">participatory fan culture and queer media <br>operating under Chinese censorship</h3>
 </div>
 <div class="menu">
   <ul>
@@ -129,8 +129,8 @@
       was described as “a case of a strongly homosocial narrative where the main relationship was only subtextually romantic, even as fans were aware of the source material being explicit about the […] romance” (Ng and Li 484) and Word of Honor fit this
       description as well; the relationship between lead characters Zhou Zishu and Wen Kexing was played out in a way that made the romantic plot between them obvious to anyone who was looking for it. </p>
 
-    <p>However, Word of Honor, like nearly all media in China, was subject to a certain level of censorship, supervised by the National Radio and Television Administration (NRTA) (国家广播电视总局 ). The NRTA’s mandate is to “implement the CPC’s (Communist Party
-      of China) propagandist strategies […], supervise and examine the quality of programs on radio, television, and the internet” (Clarification of the Reformation, 2018, quoted in (Ng and Li 481)). Series on television and web streaming platforms are
+    <p>However, Word of Honor, like nearly all media in China, was subject to a certain level of censorship, supervised by the <abbr title="国家广播电视总局">National Radio and Television Administration</abbr> (NRTA). The NRTA’s mandate is to “implement the <abbr title="Communist Party
+      of China">CPC</abbr>’s propagandist strategies […], supervise and examine the quality of programs on radio, television, and the internet” (Clarification of the Reformation, 2018, quoted in (Ng and Li 481)). Series on television and web streaming platforms are
       scrutinised according to both their platform and the level of promotion and marketing the production team expect to do. However, the presence of a censorship board does not mean there is a complete lack of expression, and many series have successfully
       managed to navigate the complicated – and at times highly unclear – regulations in order to tell the stories they wish to.</p>
 
@@ -139,7 +139,7 @@
       been “unclear and complicated” with a lack of explicit criteria encouraging productions to self-censor (Zhou), showing an unclear mandate and confusion between sources. This means that many productions, fearing being rejected for an airing licence,
       instead try not to push the boundaries and “play it safe” instead in order to guarantee a return on their investment.</p>
 
-    <p>With this in mind, in contrast with many recent predecessors – such as Guardian and The Untamed – Word of Honor quickly became notorious for its many inventive ways of circumventing the censorship of the genre, including changing lines in post-production,
+    <p>With this in mind, in contrast with many recent predecessors – such as <i>Guardian</i> and <i>The Untamed</i> – <i>Word of Honor</i> quickly became notorious for its many inventive ways of circumventing the censorship of the genre, including changing lines in post-production,
       making allusions to romantic poems without using overt romantic language, and visual cues to queer history.</p>
 
     <p>Eagle-eyed viewers who could lip-read were able to spot post-production changes to the script, where the lines spoken by the actors on set were not the same as the ones later dubbed by the voice actors for those parts.</p>
@@ -190,7 +190,7 @@
         backed up by behind the scenes footage of deleted and changed scenes, improvisation by the actors in order to make a scene more intimate and, crucially, the original lines as said by the actors on set.</p>
 
       <p>Alongside these changed lines are references to classical romantic poetry that Wen Kexing uses both to show off his education and as a way of expressing his romantic interest in Zhou Zishu. In one example, he quotes a famous poem from the Jin era
-        used in many dramas and stories before, such as Legend of the Condor Heroes, that describes a swan, mated for life, that loses its lover;</p>
+        used in many dramas and stories before, such as <i>Legend of the Condor Heroes</i>, that describes a swan, mated for life, that loses its lover;</p>
       <blockquote>千山暮雪
         <br>(我)孤翼只影向谁去(啊)
         <br>Thousands of mountains, evening snow
@@ -230,14 +230,16 @@
   </section>
   <section id="fandom">
     <h1>Fan Culture</h1>
-    <p>The fandom of danmei transmedia has been steadily growing since the genre as is it today arrived in China in the 1990s, but has been greatly facilitated by social media and online communities such as Weibo (commonly described as Chinese Twitter),
-      Lofter (commonly described as Chinese Tumblr), Douban (a message board service), and Bilibili (video sharing site, similar to YouTube) (Ng and Li 484). In very recent years, the interactions on social media between official sources and fans enter
+    <p>The fandom of danmei transmedia has been steadily growing since the genre as is it today arrived in China in the 1990s, but has been greatly facilitated by social media and online communities such as <abbr title="commonly described as Chinese Twitter">Weibo</abbr>,
+      <abbr title="commonly described as Chinese Tumblr">Lofter</abbr>, <abbr title="a message board service">Douban</abbr>, and <abbr title="video sharing site, similar to YouTube">Bilibili</abbr> (Ng and Li 484). In very recent years, the interactions on social media between official sources and fans enter
       into what Henry Jenkins would describe as “convergence culture”, as the success of media becomes more and more reliant on consumer’s active participation (Jenkins 3).</p>
 
     <h2>Online participatory culture</h2>
-    <p>Using a character from the show’s title and the setting of the show’s final episode, Word of Honor fans dubbed themselves shanren (山人) (lit. mountain people) and talked about having “climbed the mountain” and now couldn’t seem to find the path down,
+    <p>Using a character from the show’s title and the setting of the show’s final episode, Word of Honor fans dubbed themselves <i><abbr title="山人">shanren</i></abbr> (lit. mountain people) and talked about having “climbed the mountain” and now couldn’t seem to find the path down,
       alluding to how addictive the show was and how fun they found the community. English fandom adopted the term as well and added their own language to the participatory culture in their interactions as well. Twitter users interacting with the official
       Youku account in English would use “bestie” as a term of endearment, reciprocated by the social media team at Youku, further breaking down the barrier between the official production team and the fans consuming the media.</p>
+
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Shanren besties, have you rewatched <a href="https://twitter.com/hashtag/WordOfHonorThemeConcert?src=hash&amp;ref_src=twsrc%5Etfw">#WordOfHonorThemeConcert</a> with ENGSUB this weekend? Let&#39;s share your favorite moments from the concert on comment 👇🏻 <a href="https://t.co/AKc2zRmmiE">pic.twitter.com/AKc2zRmmiE</a></p>&mdash; 优酷Youku (@YoukuOfficial) <a href="https://twitter.com/YoukuOfficial/status/1393896795516719104?ref_src=twsrc%5Etfw">May 16, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 
     <p>Likewise, on Weibo, the newspapers for the home towns of the two stars joined in the fan participation with Sichuan News (hometown of Gong Jun) tagging Zhang Zhehan and Jiangxi News (hometown of Zhang Zhehan) tagging Gong Jun, each inviting them to
       visit their co-star’s hometown. Their respective hometowns participated again after the airing of Word of Honor, with the firefighter units of both Sichuan and Jiangxi promoting Gong Jun’s then-upcoming firefighter drama The Flaming Heart (你好，火焰蓝)
