--- a/index.html
+++ b/index.html
@@ -119,17 +119,15 @@
         </div>
       </div>
     </div>
-    <p>
       <hr>
-    </p>
   </section>
   <section id="wordofhonor">
     <h1>Word of Honor</h1>
-    <p>Like the adaptation Guardian before it, Word of Honor was not officially a same-sex romance, however nearly all fans of the show were aware of its origins going into the drama and most who were not quickly picked up on the subtext being shown. Guardian
+    <p>Like the adaptation <i>Guardian</i> before it, <i>Word of Honor</i> was not officially a same-sex romance, however nearly all fans of the show were aware of its origins going into the drama and most who were not quickly picked up on the subtext being shown. <i>Guardian</i>
       was described as “a case of a strongly homosocial narrative where the main relationship was only subtextually romantic, even as fans were aware of the source material being explicit about the […] romance” (Ng and Li 484) and Word of Honor fit this
-      description as well; the relationship between lead characters Zhou Zishu and Wen Kexing was played out in a way that made the romantic plot between them obvious to anyone who was looking for it. </p>
+      description as well; the relationship between lead characters Zhou Zishu (played by <abbr title="张哲瀚">Zhang Zhehan</abbr>) and Wen Kexing (played by <abbr title="龚俊">Gong Jun</abbr>) was played out in a way that made the romantic plot between them obvious to anyone who was looking for it. </p>
 
-    <p>However, Word of Honor, like nearly all media in China, was subject to a certain level of censorship, supervised by the <abbr title="国家广播电视总局">National Radio and Television Administration</abbr> (NRTA). The NRTA’s mandate is to “implement the <abbr title="Communist Party
+    <p>However, <i>Word of Honor</i>, like nearly all media in China, was subject to a certain level of censorship, supervised by the <abbr title="国家广播电视总局">National Radio and Television Administration</abbr> (NRTA). The NRTA’s mandate is to “implement the <abbr title="Communist Party
       of China">CPC</abbr>’s propagandist strategies […], supervise and examine the quality of programs on radio, television, and the internet” (Clarification of the Reformation, 2018, quoted in (Ng and Li 481)). Series on television and web streaming platforms are
       scrutinised according to both their platform and the level of promotion and marketing the production team expect to do. However, the presence of a censorship board does not mean there is a complete lack of expression, and many series have successfully
       managed to navigate the complicated – and at times highly unclear – regulations in order to tell the stories they wish to.</p>
@@ -152,9 +150,8 @@
       <blockquote>里面一定是一副罕见的美人胚子
         <br>(When I take down this mask of yours), inside it must be a very rare beautiful person</blockquote>
       <div class="video">
-        <video width="320" height="240" controls>
-          <source src="movie.mp4" type="video/mp4">
-          <source src="movie.ogg" type="video/ogg"> Your browser does not support the video tag.
+        <video width="80%" height="auto" controls>
+          <source src="assets/shl1.mp4" type="video/mp4"> Your browser does not support the video tag.
         </video>
       </div>
 
@@ -164,12 +161,11 @@
       <h3>Original line:</h3>
       <blockquote>只不过嘛啊絮你人长得俊箫却吹得不怎么样。有空我再教教你
         <br>But the thing is A’Xu, you’re good looking, but you’re not very good at blowing the flute. When I get a moment, I’ll teach you.</blockquote>
-      <div class="video">
-        <video width="320" height="240" controls>
-          <source src="movie.mp4" type="video/mp4">
-          <source src="movie.ogg" type="video/ogg"> Your browser does not support the video tag.
-        </video>
-      </div>
+        <div class="video">
+          <video width="80%" height="auto" controls>
+            <source src="assets/shl2.mp4" type="video/mp4"> Your browser does not support the video tag.
+          </video>
+        </div>
 
       <h3>Dubbed line:</h3>
       <blockquote>周子舒莫不是给他下了药吧
@@ -177,11 +173,10 @@
       <h3>Original line:</h3>
       <blockquote>那姓周的莫不是个狐狸精吧
         <br>That guy Zhou, could it be that he is a fox demon?</blockquote>
-      <p>(This phrase alludes to the mythical creature <i><abbr title="狐狸精">hulijing</abbr></i> that can turn into a beautiful woman to seduce young men and eat their life essence.)</p>
+      <p>(This phrase alludes to the mythical creature <i><abbr title="狐狸精">hulijing</abbr></i> that can turn into a beautiful woman to seduce young men and eat their life essence. Gu Xiang thinks that Zhou Zishu has seduced her master, Wen Kexing.)</p>
       <div class="video">
-        <video width="320" height="240" controls>
-          <source src="movie.mp4" type="video/mp4">
-          <source src="movie.ogg" type="video/ogg"> Your browser does not support the video tag.
+        <video width="80%" height="auto" controls>
+          <source src="assets/shl3.mp4" type="video/mp4"> Your browser does not support the video tag.
         </video>
       </div>
 
@@ -195,38 +190,38 @@
         <br>(我)孤翼只影向谁去(啊)
         <br>Thousands of mountains, evening snow
         <br>The lonely shadow, where should it fly to?</blockquote>
-      <div class="video">
-        <video width="320" height="240" controls>
-          <source src="movie.mp4" type="video/mp4">
-          <source src="movie.ogg" type="video/ogg"> Your browser does not support the video tag.
-        </video>
-      </div>
-      <p>Another example is Wen Kexing adapting a poem by Song Dynasty poet Li Zhiyi;</p>
+        <div class="video">
+          <video width="80%" height="auto" controls>
+            <source src="assets/shl4.mp4" type="video/mp4"> Your browser does not support the video tag.
+          </video>
+        </div>
+      <p>Another example is Wen Kexing adapting a romantic poem by Song Dynasty poet Li Zhiyi about the women he loves, separated from him at the other end of a long river;</p>
       <blockquote>幸得君心似我心
         <br>Fortunately, your heart is like my heart.</blockquote> The original line reads instead as
       <blockquote>只愿君心似我心
         <br>I only wish your heart is like my heart</blockquote>
-      <div class="video">
-        <video width="320" height="240" controls>
-          <source src="movie.mp4" type="video/mp4">
-          <source src="movie.ogg" type="video/ogg"> Your browser does not support the video tag.
-        </video>
-      </div>
+        <div class="video">
+          <video width="80%" height="auto" controls>
+            <source src="assets/shl5.mp4" type="video/mp4"> Your browser does not support the video tag.
+          </video>
+        </div>
       <p>The production also made a number of references and double-entendres intended to speak to the audience that would understand the references while flying over the heads of those that didn’t know (and possibly over the censors as well). A key example
         is in two episodes (Episode 5 and Episode 18) where one character slices the sleeve of the other; Wen Kexing cuts Zhou Zishu’s sleeve in Episode 5 to remove a splatter of blood and Zhou Zishu cuts off a part of Wen Kexing’s sleeve that has caught
         on fire in Episode 18.</p>
-      <div class="video">
-        <video width="320" height="240" controls>
-          <source src="movie.mp4" type="video/mp4">
-          <source src="movie.ogg" type="video/ogg"> Your browser does not support the video tag.
-        </video>
-      </div>
+        <div class="video">
+          <video width="80%" height="auto" controls>
+            <source src="assets/shl6.mp4" type="video/mp4"> Your browser does not support the video tag.
+          </video>
+        </div>
+        <div class="video">
+          <video width="80%" height="auto" controls>
+            <source src="assets/shl8.mp4" type="video/mp4"> Your browser does not support the video tag.
+          </video>
+        </div>
       <p>Both of these actions likely allude to the story of the Emperor Ai Di who cut the sleeve of his robe rather than wake his male lover who was sleeping on it when he had to leave the bed.</p>
-      <p>The production teams’ willingness to lean into the genre of danmei and not shy away from showing the deep, soft affection, vulnerability, and love between the characters earned them a quick and loyal fanbase, with the show quickly going from the
+      <p>The production teams’ willingness to lean into the genre of <i>danmei</i> and not shy away from showing the deep, soft affection, vulnerability, and love between the characters earned them a quick and loyal fanbase, with the show quickly going from the
         least anticipated adaptation of 2021 to one with a huge national and international fanbase, a farewell concert across two days with 80,000 fans present, and TV and streaming licences across the world.</p>
-      <p>
         <hr>
-      </p>
   </section>
   <section id="fandom">
     <h1>Fan Culture</h1>
@@ -262,11 +257,12 @@
       expressed by one international fan as having “made [her] entire decades [sic]”.</p>
 
       <div class="video">
-        <video width="320" height="240" controls>
-          <source src="movie.mp4" type="video/mp4">
-          <source src="movie.ogg" type="video/ogg"> Your browser does not support the video tag.
+        <video width="80%" height="auto" controls>
+          <source src="assets/shl9.mp4" type="video/mp4"> Your browser does not support the video tag.
         </video>
       </div>
+
+
 
       <p><blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">bestie thank you so much for including me!!! 👉👈 THIS MADE MY ENTIRE DECADES</p>&mdash; elle (@shanheling) <a href="https://twitter.com/shanheling/status/1389489049287733248?ref_src=twsrc%5Etfw">May 4, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 
@@ -274,12 +270,11 @@
 
     <p>Finally, the lead actors themselves were very much aware of the massive leap in their fanbases and what they owed to those fans for the success of the show. Their heartfelt thanks at the end of the Word of Honor concert showed how much they appreciated
       and were humbled by the support they received, and showed how much the fans meant to them both.</p>
-    <div class="video">
-      <video width="320" height="240" controls>
-        <source src="movie.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg"> Your browser does not support the video tag.
-      </video>
-    </div>
+      <div class="video">
+        <video width="80%" height="auto" controls>
+          <source src="assets/shl10.mp4" type="video/mp4"> Your browser does not support the video tag.
+        </video>
+      </div>
     <h2>Fans under censorship</h2>
     <p>Fans of Word of Honor are highly aware of the sensitive nature of danmei adaptations in the Chinese entertainment sphere and therefore tried to be circumspect in their interactions and discourse on social media. The term <i><abbr title="知己">zhiji</abbr></i> – used in the show
       by the two main characters to describe their own relationship – has the benefit of not having romantic connotations by default, and yet still describes an intimate relationship, and so could freely be used by fans without fear of approbation. Like
@@ -316,9 +311,7 @@
 
 
 
-    <p>
       <hr>
-    </p>
 
   </section>
 
@@ -339,9 +332,7 @@
       it is unclear if being a fan of danmei transmedia leads to becoming an activist in the name of LGBTQ+ rights. However, there is evidence that it does encourage interaction in what might be defined as a counterculture rooted in the rejection of heteronormative
       relationships and therefore in defiance of many cultural norms in contemporary Chinese society. Due to the continuous cracksdowns on and censorship of the danmei transmedia genre, it is unlikely that China will be able to use this – or indeed many
       other kinds of media – as a form of soft power in the same way that South Korea has been able to with their television and music industry or Japan has with anime, at least until they remove such restrictions on creativity.</p>
-    <p>
       <hr>
-    </p>
 
   </section>
   <section id="bibliography">
@@ -370,7 +361,7 @@
           </li>
       </ul>
     </p>
-<p><hr></p>
+<hr>
 </section>
 <section id="footnotes">
     <h1>Footnotes</h1>
@@ -388,7 +379,7 @@
       <li>Tempore officiis reprehenderit nam, earum quod laborum id debitis error odit. Quisquam! &#8617;</li>
     </ol>
     </p>
-<p><hr></p>
+<hr>
   </section>
   <section id="final">
     <footer>
