--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
   </section>
   <section id="final">
     <footer>
-      <p>&laquo; <a href="javascript:history.go(-1)">back</a> | <a href="#top">top</a> | <a href="javascript:history.go(1)">forward</a> &raquo;
+      <p>&laquo; <a href="javascript:history.go(-1)">back</a> | <a data-scroll href="#top">top</a> | <a href="javascript:history.go(1)">forward</a> &raquo;
         <br>Made with &hearts; in New Zealand | <abbr title="Infinite Diversity in Infinite Combinations">IDIC</abbr> | Word of Honor 山河令 &copy; Youku 2021</p>
     </footer>
   </section>
